add sorter class

--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
-    "vite": "^6.0.0",
+    "@babel/preset-env": "^7.28.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "babel-jest": "^30.0.4",
+    "jest": "^30.0.4",
+    "postcss": "^8.4.32",
+    "vite": "^6.0.0"
   },
   "keywords": [
     "kpop",
