--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-jest": "^30.0.4",
     "jest": "^30.0.4",
     "postcss": "^8.4.32",
+    "prettier": "^3.6.2",
     "vite": "^6.0.0"
   },
   "keywords": [
